# rose-online-AI-V2

./: .gitattributes  .gitignore  CMakeLists.txt  Manifest.json  README.md  ROADMAP.md  WARP.md
config/: charserver.yml  loginserver.yml  worldserver.yml
docs/: BUILD_AND_RUN.md
lib/: libmariadb.lib  mariadbclient.lib
resources/: 10CONS.txt  11GEM.txt  12MAT.txt  14PAT.txt  1FACE.txt  2HEAD.txt  3BODY.txt  4HAND.txt  5FOOT.txt  6BACK.txt  7ACCESS.txt  8WEAP.txt  9SHIELD.txt  Maps.sql  Monsters.sql  statid.txt
scripts/: generate_legacy_conf.py
server/: Admin_GM_Commands_and spawn Items v1.42 (1).xls
server/Binary/: CharServer.depend  CharServer.layout  HealthViewer.bat  HealthWatcher.ps1  LogRotate.ps1  LoginServer.layout  StartAllServers.bat  Watchdog.bat  WorldServer.cbp  WorldServer.depend  WorldServer.layout  charserver.conf  commands.ini  loginserver.conf  worldserver.conf
server/Binary/3DData/: Map_Grid.csv  Refine.csv
server/Binary/data/: Refine_Rules.csv
server/Char Server/: CMakeLists.txt  charclient.cpp  charpackets.cpp  charserver.cpp  charserver.h  clan.cpp  datatypes.h  extrafunctions.cpp
server/Common/: CMakeLists.txt  SocketBase.cpp  SocketClient.cpp  SocketServer.cpp  config.cpp  config.h  log.cpp  rosecrypt.cpp  sockets.h
server/Common/database/: database.cpp  database.h
server/Database/New folder/: Evolution.psc
server/Database/sql_tables/: itemmall_custom_additions.sql
server/Login Server/: CMakeLists.txt  loginserver.h
server/World Server/: Buff.cpp  CMakeLists.txt  MainProcess.cpp  MonsterStats.cpp  Party.cpp  ServerFunctions.cpp  Signal.cpp  battle.cpp  character.cpp  character.h  charfunctions.cpp  chartype.h  clan.cpp  console.cpp  datatypes.h  datatypes_compat.h  extrafunctions.cpp  gmcmds - Copy.cpp  gmcmds.cpp  group.cpp  ltbhandler.cpp  ltbhandler.h  main.cpp  mapfunctions.cpp  packets.cpp  partyfunctions.cpp  player.cpp  player.h  playerdata.cpp  playerfunctions.cpp  playerstats.cpp  startup.cpp  stbhandler.cpp  stlhandler.cpp  worldmap.cpp  worldpackets.cpp  worldserver.cpp  worldserver.h
server/World Server/aip/: Aip.cpp
server/World Server/quest/: QuestActions.cpp  QuestConditions.cpp  Quests.cpp
sql/: 001_core_schema.sql
web/: .env  .env.example  README.md  config.js  db.js  package-lock.json  package.json  server.js
web/public/: download.html  index.html  login.html  rankings.html  register.html  status.html  styles.css
(+146 files in other folders)
